rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__unnest_i64_from_table.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT unnest(r.a) FROM (SELECT ARRAY[1,2,3,4] as a UNION ALL SELECT ARRAY[5,6,7,8] as a) as r;\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-------------+
| unnest(r.a) |
+-------------+
| 1           |
| 2           |
| 3           |
| 4           |
| 5           |
| 6           |
| 7           |
| 8           |
+-------------+
