rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__unnest_i64_scalar.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT unnest(ARRAY[1,2,3,4,5]);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------+
| unnest(List([1,2,3,4,5])) |
+---------------------------+
| 1                         |
| 2                         |
| 3                         |
| 4                         |
| 5                         |
+---------------------------+
